--- a/settings/dialog-settings.html
+++ b/settings/dialog-settings.html
@@ -1,10 +1,12 @@
-<table class="table">
-    <tbody>
-    <% eachSetting(function (id, setting) { %>
-        <tr>
-            <td><label for="staticpreview-setting-<%= id %>"><%= setting.label %></label></td>
-            <td><input id="staticpreview-setting-<%= id %>" type="text" /></td>
-        </tr>
-    <% }) %>
-    </tbody>
-</table>
+<div class="row">
+    <div class="span6">
+        <form class="form-horizontal">
+            <% eachSetting(function (id, setting) { %>
+            <div class="control-group">
+                <label class="control-label" for="staticpreview-setting-<%= id %>"><%= setting.label %></label>
+                <div class="controls"><input id="staticpreview-setting-<%= id %>" type="text" /></div>
+            </div>
+        <% }) %>
+        </form>
+    </div>
+</div>
